<resources>
 	 <string name="nearing_parking">附近车位</string>
 	 <string name="public_parking">发布车位</string>
    <string name="app_name">抢车位</string>
    <string name="version_name">4.4.3</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="channel_id">zhengshi</string>
    <string name="user_sir">先生</string>
    <string name="user_lady">女士</string>
    <string name="can_use_account">余额：</string>
    <string name="user_yuan">元</string>
    <string name="public_minute">分钟</string>
    <string name="public_km">公里</string>
    <string name="price_rul_low">低至</string>
    <string name="price_rul_one">一口价</string>
    <string name="phone_num_list">通讯录</string>
    <string name="own_use">自己用</string>
    <string name="aways_contact_key">常</string>
    <string name="UPDATE_LOD_FAIL">下载失败</string>
    <string name="user_login">账户登录</string>
    <string name="go_login">登 录</string>
    <string name="go_register">注 册</string>
    <string name="user_password">密    码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="go_re_password">重置密码</string>
    <string name="logout_sure">确认退出登录吗？</string>
    <string name="action_out">退出</string>
    <string name="action_sure">确定</string>
    <string name="action_back">返回</string>
    <string name="action_cancel">取消</string>
    <string name="action_order_cancel">取消订单</string>
    <string name="action_promot">提示</string>
    <string name="need_update_msg">发现有新版本赶快下载吧!</string>
    <string name="installation_failed_msg" />
    <string name="update_doing">正在下载,请耐心等待</string>
    <string name="net_error">网络异常,请检查你的网络</string>
    <string name="aways_news">您已经是最新版本</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_pwd">请输入密码</string>
    <string name="phone_error">手机号码格式不正确</string>
    <string name="edit_name">请输入姓名</string>
    <string name="edit_email">请输入邮箱</string>
    <string name="user_chengwei">称谓</string>
    <string name="user_register_go">注册新用户</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="have_account">已有账号？</string>
    <string name="accept_arrgement">同意协议并注册</string>
    <string name="user_logout">退出登录</string>
    <string name="add_user_msg">点此完善信息</string>
    <string name="user_re_password">修改密码</string>
    <string name="edit_old_pswd">请输入原密码</string>
    <string name="edit_new_swd">请输入新密码</string>
    <string name="edit_sure_pswd">请输入密码确认</string>
    <string name="edit_short_pswd">密码长度需要6位以上</string>
    <string name="edit_ver_code">请输入验证码</string>
    <string name="edit_error_pswd">两次输入的密码不一致</string>
    <string name="edit_chongfu_pswd">新密码与原密码相同,修改失败</string>
    <string name="re_pswd_success">密码修改成功</string>
    <string name="email_error">邮箱格式不正确</string>
    <string name="choice_img_land">选择本地图片</string>
    <string name="choice_photo">拍照</string>
    <string name="set_photo_img">设置头像</string>
    <string name="no_dcim">未找到存储卡，无法存储照片！</string>
    <string name="re_success">修改成功</string>
    <string name="ver_code_send">验证码已发送</string>
    <string name="name_length_short">姓名不能少于2位</string>
    <string name="sure_edit_re">确认修改</string>
    <string name="edit_phone_num">请输入手机号码</string>
    <string name="edit_phone_num_right">请输入正确的手机号码</string>
    <string name="register_success">注册成功,可以使用</string>
    <string name="msg_check_code">短信验证</string>
    <string name="getting_vercode">获取中</string>
    <string name="history_orders">历史订单</string>
    <string name="more_title">更多</string>
    <string name="more_check_version">版本更新</string>
    <string name="more_services">服务协议</string>
    <string name="mo_user">会员注册协议</string>
    <string name="mo_pay">支付授权书</string>
    <string name="mo_pay1">支付授权书</string>
    <string name="mo_car">车型介绍</string>
    <string name="mo_price">价格详情</string>
    <string name="mo_service">服务协议</string>
    <string name="mo_help">帮助</string>
    <string name="mo_apps">应用推荐</string>
    <string name="mo_about">关于我们</string>
    <string name="mo_about_msg1">随时随地提供优质的用车服务</string>
    <string name="mo_about_msg2">AA租车Android版</string>
    <string name="user_my_card">信用卡</string>
    <string name="aways_bind">已绑定信用卡：</string>
    <string name="bind_last_msg">"* 服务完成之后2小时系统自动扣款
* 余额不足则剩余部分自动从信用卡扣取"</string>
    <string name="bind_cancel">解除绑定</string>
    <string name="bind_cancel_tip">如需修改信用卡，请先解除绑定</string>
    <string name="bind_cancel_success">解除绑定成功</string>
    <string name="support_words">• 完整条款请参考</string>
    <string name="tip_card">信用卡 Credit Card</string>
    <string name="gfwb_Url">官方微博:<a href="">http://weibo.com/aayongche</a></string>
    <string name="gfwz_Url">官方网址:<a href="">http://www.aayongche.com</a></string>
    <string name="kfdh_num">客服电话:<a href="">400-010-6767</a></string>
    <string name="content_msg">联系人信息</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="coupon">优惠券</string>
    <string name="coupon_detail">查看详情</string>
    <string name="coupon_list">优惠活动</string>
    <string name="user_pay">充值</string>
    <string name="pay_some">充值金额：</string>
    <string name="pay_types">选择充值方式</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_unionpay">银联</string>
    <string name="pay_ucfpay">乐卡</string>
    <string name="pay_ucfpay_alert_title">提示</string>
    <string name="pay_tip_msg">*请确认默认商户为“先锋智道（北京）科技有限公司”之后再进行充值操作。</string>
    <string name="NextButton">下一步，确认订单</string>
    <string name="AnyTime_time">用车时间:</string>
    <string name="AnyTime_goAddress">当前地点:</string>
    <string name="AnyTime_toAddress">目的地点:</string>
    <string name="AnyTime_chooseCar">选择车型</string>
    <string name="AnyTime_linkMan">姓名：</string>
    <string name="AnyTime_phone">电话：</string>
    <string name="AnyTime_message">全程短信提示乘车人</string>
    <string name="AnyTime_remark">编写此订单备注</string>
    <string name="AnyTime_coupon">使用优惠券</string>
    <string name="AnyTime_remark_content">您的订单附加要求,MR.A尽可能满足</string>
    <string name="Hour_timelong">用车时长</string>
    <string name="OnceTime">上车时间：</string>
    <string name="tips">*AA租车会持续努力减少您的等待时间</string>
    <string name="address">定位中...</string>
    <string name="people">乘车人:</string>
    <string name="account">选定结算的账户：</string>
    <string name="account_people">个人账户</string>
    <string name="my">我自己</string>
    <string name="success_address">√已定位</string>
    <string name="sinaweibo_share_success">分享成功</string>
    <string name="sinaweibo_share_nonetwork">无网络</string>
    <string name="sinaweibo_share_failed">分享失败</string>
    <string name="sinaweibo_share_repeat_content">请不要短时间内发表重复内容</string>
    <string name="share_content1">在这个偌大的城市，没有人会心疼我的脆弱，我必须让自己更加坚强。感谢一路有@AA租车网 的陪伴，推荐你也来体验 ：</string>
    <string name="share_content2">有时阳光明媚，有时漫天乌云，生活就像是一包比比多味豆，五味杂陈只有自己知道。@AA租车网 愿陪你度过每一天：</string>
    <string name="share_content3">自从用了@AA租车网 ，麻麻再也不用担心我的出行了！你还不知道？我和我的小伙伴们都惊呆了！快来感受下：</string>
    <string name="share_content4">烧香的不一定是和尚，也有可能是熊猫。接送你出行的不一定是亲朋，也有可能是@AA租车网 ，服务贴心，真的很不错：</string>
    <string name="app_share">分享</string>
    <string name="edit_share_content">请输入分享的内容</string>
    <string name="dd_ddlb">订单列表</string>
    <string name="dd_jxz">进行中</string>
    <string name="dd_ywc">已完成</string>
    <string name="dd_gwd">公务单</string>
    <string name="dd_ddxq">订单详情</string>
    <string name="dd_xdsj">下单时间：</string>
    <string name="dd_scsj">上车时间：</string>
    <string name="dd_scdd">上车地点：</string>
    <string name="dd_xcdd">下车地点：</string>
    <string name="qt_qt">更多</string>
    <string name="dd_jjxx"><a style="color:#5f8712" href="http://www.aayongche.com">计价详细</a></string>
    <string name="yhq_wdyhq">我的优惠券</string>
    <string name="yhq_null">无可使用优惠</string>
    <string name="yhq_getsuccess">领取成功</string>
    <string name="yhq_geted">已领取</string>
    <string name="yhq_geted_wb">已领取完毕</string>
    <string name="yhq_get">领取优惠券</string>
    <string name="yhq_detail">优惠券详情</string>
    <string name="rule_tit">使用规则</string>
    <string name="yhq_input_code">请输入优惠券码</string>
    <string name="yhq_validtime">有效期：</string>
    <string name="yhq_canuse">可用优惠券</string>
    <string name="cancel_yhq">不使用优惠券</string>
    <string name="yhq_add_title">添加优惠券</string>
    <string name="add_success">添加成功</string>
    <string name="yhq_start_time">开始时间：</string>
    <string name="yhq_end_time">结束时间：</string>
    <string name="huodong_contets">"活动内容：
"</string>
    <string name="get_use">使用</string>
    <string name="edit_djq">请输入代金券码</string>
    <string name="dzxz_sxcdd">搜索地点</string>
    <string name="dzxz_xd">选定</string>
    <string name="dzxz_xzwz">请移动地图选择位置</string>
    <string name="dzxz_none_text">无搜索结果</string>
    <string name="cp_code_notnull">优惠券码不能为空</string>
    <string name="cp_code_success">优惠券添加成功</string>
    <string name="tsjy_tsjy">投诉建议</string>
    <string name="tsjy_bm">您的宝贵建议，将帮助我们更好的改进服务。</string>
    <string name="tsjy_qrtj">提交</string>
    <string name="fp_kfp">发票管理</string>
    <string name="fp_fpxx">发票信息</string>
    <string name="fp_fptt">发票抬头：</string>
    <string name="fp_fpnr">发票内容</string>
    <string name="fp_fpje">发票金额：</string>
    <string name="fp_kkje">可开发票额度</string>
    <string name="fp_jsdz">地址：</string>
    <string name="fp_jsdq">地区：</string>
    <string name="fp_dz">地址</string>
    <string name="fp_yb">邮编：</string>
    <string name="fp_sjr">收件人：</string>
    <string name="fp_lxdh">手机：</string>
    <string name="fp_qrkfp">确认开发票</string>
    <string name="invoice_order">开票记录</string>
    <string name="invoice_well">我要开发票</string>
    <string name="invoice_do">开发票</string>
    <string name="invoice_">发票类型：</string>
    <string name="invoice_address">邮寄信息</string>
    <string name="invoice_address_1">详细地址</string>
    <string name="invoice_address_area">地区：</string>
    <string name="invoice_address_choose">请选择地区</string>
    <string name="invoice_sure">请确认开票信息，提交后不可修改</string>
    <string name="invoice_success">提交成功!</string>
    <string name="invoice_success_title">我们会尽快审核并邮寄您的发票</string>
    <string name="invoice_success_finish">完成</string>
    <string name="invoice_message_area">地区信息</string>
    <string name="invoice_status_1">未通过</string>
    <string name="invoice_status_2">已寄出</string>
    <string name="invoice_status_3">审核中</string>
    <string name="invoice_status">状态</string>
    <string name="invoice_no">暂无开票记录</string>
    <string name="invoice_toast_1">请填写发票金额</string>
    <string name="invoice_toast_2">请填写发票抬头</string>
    <string name="invoice_toast_3">请填写收件人</string>
    <string name="invoice_toast_4">请填写手机</string>
    <string name="invoice_toast_5">请填写地区</string>
    <string name="invoice_toast_6">请填写详细地址</string>
    <string name="invoice_toast_7">请填写邮编</string>
    <string name="action_restart">重试</string>
    <string name="welcome_text">您的网络状况目前不佳，您可以</string>
    <string name="ywc_null">暂无已完成订单</string>
    <string name="jxz_null">暂无进行订单</string>
    <string name="yhhd_null">暂无优惠活动</string>
    <string name="cancel_order">"取
消
订
单"</string>
    <string name="cancel_od">取消订单</string>
    <string name="title_order_jxz">进行中订单</string>
    <string name="title_order_history">历史订单</string>
    <string name="detail_order">订单详情</string>
    <string name="title_carinfo">车辆信息</string>
    <string name="title_travelconsume">行程消费</string>
    <string name="money_marke">￥</string>
    <string name="already_rating">已完成评价</string>
    <string name="already_cancel">已取消</string>
    <string name="no_order_info">此订单无车辆信息</string>
    <string name="order_info">订单信息</string>
    <string name="send_check_code">发送验证码</string>
    <string name="write_invitation">填写邀请码</string>
    <string name="invitation">(选填)</string>
    <string name="reg_check_code">验证码</string>
    <string name="reg_protocol_text">提交注册即代表您同意我们的</string>
    <string name="reg_protocol">《注册协议》</string>
    <string name="psw_login">密码登录</string>
    <string name="fast_login">快捷登录</string>
    <string name="and">或</string>
    <string name="read_agree">您已阅读并同意我们的</string>
</resources>