<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/act_background"
    android:orientation="vertical" >

    <include layout="@layout/public_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@id/login_tab_btn"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:minHeight="0.0dip"
                        android:padding="10.0dip"
                        android:text="@string/psw_login"
                        android:textSize="@dimen/big_size" />

                    <TextView
                        android:layout_width="1.0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="2.0dip"
                        android:background="@color/gray" />

                    <Button
                        android:id="@id/flogin_tab_btn"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:minHeight="0.0dip"
                        android:padding="10.0dip"
                        android:text="@string/fast_login"
                        android:textSize="@dimen/big_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@id/tv_lin1"
                        android:layout_width="fill_parent"
                        android:layout_height="4.0dip"
                        android:layout_weight="1.0"
                        android:background="@color/black"
                        android:visibility="visible" />

                    <TextView
                        android:id="@id/tv_lin2"
                        android:layout_width="fill_parent"
                        android:layout_height="4.0dip"
                        android:layout_weight="1.0"
                        android:background="@color/black"
                        android:visibility="invisible" />
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:background="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@id/et_un"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_bg_color"
                    android:hint="@string/edit_phone"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:padding="8.0dip"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_size" />

                <LinearLayout
                    android:id="@id/layout_fast_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <EditText
                        android:id="@id/et_un_fast"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/edit_bg_color"
                        android:gravity="left"
                        android:hint="@string/edit_phone"
                        android:inputType="phone"
                        android:maxLength="20"
                        android:padding="8.0dip"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@id/linlay_vercode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="10.0dip"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@id/et_code"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/edit_bg_color"
                    android:hint="@string/edit_ver_code"
                    android:maxLength="4"
                    android:numeric="integer"
                    android:padding="8.0dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_size" />

                <Button
                    android:id="@id/btn_getcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/public_cant_press3"
                    android:minHeight="0.0dip"
                    android:text="@string/get_ver_code"
                    android:textColor="@color/sbcolor"
                    android:textSize="@dimen/medium_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/linlay_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:layout_marginRight="20.0dip"
                    android:layout_marginTop="10.0dip"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@id/et_pw"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_bg_color"
                        android:hint="@string/edit_pwd"
                        android:padding="8.0dip"
                        android:password="true"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_size" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20.0dip" >

                    <TextView
                        android:id="@id/tv_forgetpw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:padding="10.0dip"
                        android:text="@string/forget_password"
                        android:textColor="@color/order_color"
                        android:textSize="@dimen/medium_size" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20.0dip" >

                <Button
                    android:id="@id/bt_next"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:background="@drawable/public_cant_press2"
                    android:minHeight="0.0dip"
                    android:padding="10.0dip"
                    android:text="@string/go_login"
                    android:textColor="@color/sbcolor"
                    android:textSize="@dimen/big_size" />

                <Button
                    android:id="@id/bt_next_fast"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:background="@drawable/public_cant_press2"
                    android:minHeight="0.0dip"
                    android:padding="10.0dip"
                    android:text="@string/go_login"
                    android:textColor="@color/sbcolor"
                    android:textSize="@dimen/big_size"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@id/laylin_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="15.0dip" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/spline" />

                        <TextView
                            android:id="@id/title_about"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:padding="4.0dip"
                            android:text="@string/and"
                            android:textColor="@color/common_4.0text"
                            android:textSize="@dimen/medium_size" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/spline" />
                    </LinearLayout>

                    <Button
                        android:id="@id/bt_register"
                        android:layout_width="fill_parent"
                        android:layout_height="45.0dip"
                        android:layout_gravity="right|center"
                        android:background="@drawable/public_register_btn"
                        android:minHeight="0.0dip"
                        android:padding="10.0dip"
                        android:text="@string/go_register"
                        android:textColor="@color/white"
                        android:textSize="@dimen/big_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@id/laylin_xieyi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20.0dip"
                    android:layout_marginRight="20.0dip"
                    android:layout_marginTop="20.0dip"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:id="@id/reg_protocol_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_agree"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_size" />

                    <TextView
                        android:id="@id/reg_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_protocol"
                        android:textColor="#ff72af2d"
                        android:textSize="@dimen/medium_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>